fdo#77126 BitmapEx.Scale already takes care of mirroring

Change-Id: I320a5ec1da62cc1a8b3cb227298ecaf99f305a6f